--- a/oobe/src/components/Sidebar.scss
+++ b/oobe/src/components/Sidebar.scss
@@ -71,7 +71,7 @@
 
 .sidebar-toggle {
   position: fixed;
-  top: 10px;
+  top: 20px;
   background: none;
   border: none;
   color: #fff;
