--- a/oobe/src/pages/IndustrialAutomation.scss
+++ b/oobe/src/pages/IndustrialAutomation.scss
@@ -31,7 +31,7 @@
   align-content: center;
   align-items: center;
   gap: 2rem;
-  width: 100%;
+  width: 90%;
   padding-bottom: 10em;
 }
 
