--- a/oobe/src/pages/Medical.scss
+++ b/oobe/src/pages/Medical.scss
@@ -24,15 +24,16 @@
   text-align: center;
 }
 
-.cards-wrapper {
+.cards-wrapper-medical {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-content: center;
   align-items: center;
   gap: 2rem;
-  width: 100%;
+  width: 90%;
   padding-bottom: 10em;
+  grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
 }
 
 .medical-logo {
