--- a/oobe/src/pages/SmartBuilding.scss
+++ b/oobe/src/pages/SmartBuilding.scss
@@ -24,14 +24,14 @@
   text-align: center;
 }
 
-.cards-wrapper {
+.cards-wrapper-smartBuilding {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-content: center;
   align-items: center;
   gap: 2rem;
-  width: 100%;
+  width: 90%;
   padding-bottom: 10em;
 }
 
